welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
  if(vuBiscuit) return true
  ^